# code-golf

./: .gitignore  README.rst  base.mk  compose.mk  help.mk
.github/: determine-tag.sh
.github/actions/build-image/: action.yaml
.github/actions/detect/: action.yaml
.github/actions/dispatch/: action.yaml
.github/workflows/: main.yaml  message-queue-ci.yaml  mq-cpp.yaml  mq-golang.yaml  mq-haskell.yaml  mq-infra.yaml  mq-python.yaml  mq-run-test.yaml  mq-rust.yaml
1.hello-world/c/: Containerfile  GNUmakefile
1.hello-world/cpp/: GNUmakefile
1.hello-world/haskell/: GNUmakefile
1.hello-world/nasm/: GNUmakefile  Makefile
1.hello-world/python/: GNUmakefile  Makefile
1.hello-world/rust/: GNUmakefile  Makefile
1.hello-world/sh/: GNUmakefile
2.echo-argv/nasm/: Makefile
3.cmp/nasm/: GNUmakefile
5.connection-counter/haskell/state/: GNUmakefile  main.hs
5.connection-counter/haskell/thread-stm/: GNUmakefile  Makefile  main.hs
containers/postgres/: Containerfile  README.rst
containers/sh-toolchain/: Containerfile  GNUmakefile  deps.sh
filesync/python/: GNUmakefile  setup.py
filesync/python/src/jmcgfs/: main.py
filesync/python/test/: test_main.py
message-queue/: .gitattributes  GNUmakefile  README.rst  compose.yaml  mqp-base.mk
message-queue/container/: base.mk
message-queue/container/base-debian/: Containerfile  GNUmakefile
message-queue/container/base-debian-testing/: Containerfile  GNUmakefile
message-queue/container/base-haskell/: Containerfile  GNUmakefile  compose.yaml
message-queue/container/grafana/: GNUmakefile  compose.yaml  grafana.db
message-queue/container/postgres/: .psqlrc  Containerfile  GNUmakefile  compose.yaml  entrypoint.sh  max_samples.sql  postgresql.conf  samples.sql
message-queue/container/postgres-prometheus-exporter/: GNUmakefile  compose.yaml
message-queue/container/postgres-test/: GNUmakefile  compose.yaml  postgresql.conf
message-queue/container/postgres/init/: 02.schema.sh  03.results.sql.in
message-queue/container/prometheus/: GNUmakefile  compose.yaml  prometheus.yml
message-queue/container/pushgateway/: GNUmakefile  compose.yaml
message-queue/cpp/: .project_vimrc  Containerfile  Containerfile-dev  GNUmakefile  README.rst  compose.yaml
message-queue/cpp/src/: algorithm.cpp  algorithm.hpp  algorithm_test.cpp  algorithm_unittest.cpp  config.cpp  config.hpp  instance.cpp  instance.hpp  log.cpp  log.hpp  main.cpp  pg_test.cpp  pg_test.hpp  pg_unittest.cpp  pg_unittest.hpp  postgres.cpp  postgres.hpp  postgres_test.cpp  postgres_unittest.cpp  primitives.cpp  primitives.hpp  primitives_test.cpp  prometheus.cpp  prometheus.hpp  runtime.cpp  runtime.hpp  telemetry.hpp
message-queue/cpp/src/cmd/: main.cpp
message-queue/cpp/src/mq_system/: abc.hpp  postgres.cpp  postgres.hpp
message-queue/cpp/src/mt_system/: thread.cpp  thread.hpp  thread_test.cpp
message-queue/cpp/src/telemetry/: abc.cpp  abc.hpp  postgres.cpp  postgres.hpp  postgres_test.cpp  prometheus.cpp  prometheus.hpp
message-queue/golang/: Containerfile  Containerfile-dev  GNUmakefile  README.rst  algorithm.go  compose.yaml  config.go  go.mod  go.sum  instance.go  primitives.go  primitives_test.go  prometheus.go  src.go
message-queue/golang/cmd/: main.go
message-queue/golang/observer/: postgres.go  postgres_test.go
message-queue/golang/src/: algorithm.go  algorithm_test.go  config.go  die.go  event.go  event_test.go  go.mod  go.sum  instance.go  observer.go  observer_test.go  primitives.go  primitives_test.go  prometheus.go  sampler.go
message-queue/golang/src/cmd/: main.go
message-queue/golang/src/core/: config.go  error.go  event.go  event_test.go  observer.go  observer_test.go  primitives.go  primitives_test.go  runtime.go
message-queue/golang/src/observer/: postgres.go  postgres_test.go
message-queue/golang/src/sampler/: sampler.go
message-queue/golang/src/telemetry/: observer.go  observer_test.go  postgres.go  postgres_test.go  prometheus.go  pusher.go
message-queue/golang/src/test/: config.go
message-queue/haskell/: .gitignore  Containerfile  Containerfile-dev  GNUmakefile  Main.hs  README.rst  compose.yaml  jmcgmqp.cabal  src.cabal
message-queue/haskell/src/: Jmcgmqp.hs
message-queue/haskell/src/Jmcgmqp/: Algorithm.hs  Config.hs  Instance.hs  Postgres.hs  Prometheus.hs  Runtime.hs  Uname.hs  Worker.hs
message-queue/haskell/src/Jmcgmqp/Prometheus/: Http.hs  Metrics.hs
message-queue/haskell/src/test/: AlgorithmSpec.hs  Main.hs  PostgresSpec.hs  TestConfig.hs  WorkerSpec.hs
message-queue/python/: Containerfile  Containerfile-dev  GNUmakefile  README.rst  compose.yaml  conftest.py  main.py  primitives.py  prometheus.py  pytest.ini  setup.py
message-queue/python/src/jmcgmqp/: algorithm.py  base_config.py  config.py  event.py  main.py  multiprocess.py  observable.py  observable_test.py  observer.py  primitives.py  runtime.py  test_observable.py
message-queue/python/test/: conftest.py  test_algorithm.py  test_observer.py
message-queue/python/test/observer/: test_postgres.py  test_registry.py  test_stdout.py
message-queue/python/test/primitives/: test_results.py
message-queue/rust/: Cargo.toml  Containerfile  Containerfile-dev  GNUmakefile  README.rst  compose.yaml
message-queue/rust/src/lib/: config.rs  lib.rs  postgres.rs  prometheus.rs  runtime.rs  worker.rs
phonebook/python/: main.py  test_main.py
postgres-mq/common/: schema.sql
postgres-mq/container/postgres/: GNUmakefile
postgres-mq/container/postgres/init/: 02.schema.sh
postgres-mq/cpp/: .project_vimrc  GNUmakefile
postgres-mq/cpp/src/: main.cpp
postgres-mq/golang/: go.mod  src.go
postgres-mq/haskell/: Main.hs  src.cabal
postgres-mq/python/: main.py
postgres-mq/rust/: Cargo.toml  GNUmakefile
postgres-mq/rust/src/: main.rs
telemetry/: GNUmakefile  compose.yaml
telemetry/postgres/: GNUmakefile  compose.yaml  postgresql.conf
telemetry/postgres-test/: .psqlrc  GNUmakefile  compose.yaml
telemetry/postgres/init/: 01.role.sql  02.schema.sh
telemetry/prometheus/: Containerfile
(+33 files in other folders)
