Cabal-Version: 3.4
Name: jmcgmqp
Version: 0.1.1

Executable main
  Main-is: Main.hs
  Build-Depends: base >4 && <5
  Hs-Source-Dirs: ./src/bin
  ghc-options: -Wall -Weverything
    -Wno-unsafe -Wno-missing-safe-haskell-mode -Wno-safe
    -Wno-all-missed-specializations
    -Wno-implicit-prelude
 -- can't enable -Wno-unsafe due to postgresql-simple not being safe, maybe later.
 -- -Wall-missed-specializations might be worthwhile, later.
  Build-Depends:
    base >4 && < 5
    , jmcgmqp

Library
  Hs-Source-Dirs: ./src
  Exposed-Modules:
    Jmcgmqp,
    Jmcgmqp.Prometheus,
    Jmcgmqp.Prometheus.Metrics,
    Jmcgmqp.Runtime,
    Jmcgmqp.Worker,
  ghc-options: -Wall -Weverything
    -Wno-unsafe -Wno-missing-safe-haskell-mode -Wno-safe
    -Wno-all-missed-specializations
    -Wno-implicit-prelude
 -- can't enable -Wno-unsafe due to postgresql-simple not being safe, maybe later.
 -- -Wall-missed-specializations might be worthwhile, later.
  default-extensions:
    DerivingStrategies,
    DoAndIfThenElse,
    DisambiguateRecordFields,
    DuplicateRecordFields,
    ImportQualifiedPost,
    NumericUnderscores,
    OverloadedRecordDot,
    OverloadedStrings,
    StandaloneKindSignatures,
  Other-Modules:
    Jmcgmqp.Config,
    Jmcgmqp.Uname,
    Jmcgmqp.Prometheus.Http
  Build-Depends:
    base >= 4 && < 5
    , clock >= 0.8.4 && < 0.9
    , postgresql-simple >= 0.7.0 && < 0.8
    , monad-loops >= 0.4.3 && < 0.5
    , prometheus-client >= 1.1 && < 1.2
    , bindings-uname >= 0.1 && < 0.2
    , uuid >= 1.3.15 && < 1.4
    , time >= 1.12 && < 1.13
    , timerep >= 2.1.0 && < 2.2
    , containers >= 0.6.7 && < 0.7
    , extra >= 1.7.16 && < 1.8
    , IfElse >= 0.85 && < 0.86
    , bytestring >= 0.11.5 && <0.12
    , http-client >= 0.7.17 && < 0.8
    , http-types >= 0.12.4 && < 0.13
    , uri-encode >= 1.5.0.7 && < 1.6

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: src/test
  main-is: Main.hs
  build-depends:
    base >= 4 && < 5
    , jmcgmqp
    , hspec >= 2.11.9 && < 2.12
    , QuickCheck >= 2.15.0.1 && < 2.16
  default-language: Haskell2010
